src/objects/CaseResolution__c.object
<CustomObject>
    <fields>
        <fullName>UnauthorizedAlteration__c</fullName>
        <label>Autorizada alteração?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim | Comunicar transportador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Verificar anotações abaixo | Posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valor_total__c</fullName>
        <label>Valor total:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venda_Rot_T_Novo_produto_processada__c</fullName>
        <label>Venda Rot T / Novo produto processada?</label>
        <picklist>
            <picklistValues>
                <fullName>Não tem todos os produtos | Enviar para reversa efetuar empenho virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcialmente / Enviar para reversa efetuar empenho virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim / Finalizar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dados divergentes / Enviar para Atendimento verificar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venda_ecom_processada_Novo_Prod__c</fullName>
        <label>Venda ecom processada? Novo Prod</label>
        <picklist>
            <picklistValues>
                <fullName>Parcialmente / Enviar para Suporte Comercial verificar similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Finalizar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venda_ecom_processada__c</fullName>
        <label>Venda ecom processada?</label>
        <picklist>
            <picklistValues>
                <fullName>Dados divergentes / Enviar para Atendimento verificar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcialmente / Enviar para Suporte Comercial verificar similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim | Enviar para ativo posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dados divergentes / Enviar para Atendimento verificar  (PREENCHER Qual dado está divergente?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem todos os produtos / Enviar para reversa efetuar empenho virtual (PREENCHER Qual produto não está disponível?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcialmente / Enviar para reversa efetuar empenho virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcialmente / Enviar para Suporte Comercial verificar similar  (PREENCHER Qual produto não está disponível?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim / Contatar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WeatherObservationsSC__c</fullName>
        <label>Observações (Previsão SC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatResolvedPosition__c</fullName>
        <label>O que ficou resolvido? (Posição)</label>
        <picklist>
            <picklistValues>
                <fullName>Reenviar produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar pedido | Foi aberta OC | Solicitar SIM e encerrar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do produto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhatResolved__c</fullName>
        <label>O que ficou resolvido?</label>
        <picklist>
            <picklistValues>
                <fullName>Reenviar produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar pedido | Foi aberta OC | Solicitar SIM e encerrar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechar fluxo | Cliente confirmou recebimento do produto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>restituicaoSolicitada__c</fullName>
        <label>Restituição solicitada?</label>
        <picklist>
            <picklistValues>
                <fullName>Não | Enviar para ativo verificar dados divergentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Enviar para suporte comercial verificar similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resolução de Caso</label>
    <listViews>
        <fullName>An_lise_de_fraude_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Análise de fraude Samsung</label>
        <queue>An_lise_de_fraude_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Ativo_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Ativo</label>
        <queue>Atendimento_Samsung_Ativo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung</label>
        <queue>Atendimento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Suporte_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Suporte</label>
        <queue>Atendimento_Samsung_Suporte</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD350_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>CD350 Samsung</label>
        <queue>CD350_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD350_Samsung_Usuario_Criador_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>CD350 Samsung Usuário Criador</label>
        <queue>CD350_Samsung_Usuario_Criador</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financeiro_Contas_a_Receber_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Financeiro – Contas a Receber Samsung</label>
        <queue>Financeiro_Contas_a_Receber_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Refaturamento_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Refaturamento Samsung</label>
        <queue>Processamento_Refaturamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Samsung</label>
        <queue>Processamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Suporte_Comercial_Samsung_CaseResolution</fullName>
        <filterScope>Queue</filterScope>
        <label>Suporte Comercial Samsung</label>
        <queue>Suporte_Comercial_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RC-{000}</displayFormat>
        <label>Número da Resolução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resoluções de Casos</pluralLabel>
    <recordTypes>
        <fullName>Acompanhar_Devolucao</fullName>
        <active>true</active>
        <label>Acompanhar Devolução</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acompanhar_Entrega</fullName>
        <active>true</active>
        <label>Acompanhar Entrega</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acompanhar_Entrega_Dados_Divergentes</fullName>
        <active>true</active>
        <label>Acompanhar Entrega (Dados Divergentes)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acompanhar_Posicao_Erro_de_Anuncio</fullName>
        <active>true</active>
        <label>Acompanhar Posição Erro de Anúncio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acompanhar_Posicao_Erro_de_Cadastro</fullName>
        <active>true</active>
        <label>Acompanhar Posição Erro de Cadastro</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aguardar_Solucao_Erro_Garantia</fullName>
        <active>true</active>
        <label>Aguardar Solução - Erro Garantia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Coleta_e_Devolucao</fullName>
        <active>true</active>
        <label>Análise Coleta e Devolução</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Entrega_Acareacao</fullName>
        <active>true</active>
        <label>Análise Entrega Acareação</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Erro_Garantia</fullName>
        <active>true</active>
        <label>Análise - Erro Garantia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Erro_de_Anuncio</fullName>
        <active>true</active>
        <label>Análise Erro de Anúncio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Erro_de_Cadastro</fullName>
        <active>true</active>
        <label>Análise Erro de Cadastro</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Erro_na_Venda</fullName>
        <active>true</active>
        <label>Análise Erro na Venda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Fraude_Coleta_e_Devolucao</fullName>
        <active>true</active>
        <label>Análise Fraude - Coleta e Devolução</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_Produto_Devolvido</fullName>
        <active>true</active>
        <label>Análise Produto Devolvido</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_de_Fraude</fullName>
        <active>true</active>
        <label>Análise de Fraude</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_do_Atraso_na_Emiss_o_da_NF</fullName>
        <active>true</active>
        <label>Análise do Atraso na Emissão da NF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_do_Produto</fullName>
        <active>true</active>
        <label>Análise do Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_e_Processamento_da_Venda</fullName>
        <active>true</active>
        <label>Análise e Processamento da Venda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_e_Processamento_da_Venda_Problemas_com_Trocas_ou_Vendas</fullName>
        <active>true</active>
        <label>Análise e Processamento da Venda - Problemas com Trocas ou Vendas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Analise_e_Solicitacao_Restituicao</fullName>
        <active>true</active>
        <label>Análise e Solicitação Restituição</label>
    </recordTypes>
    <recordTypes>
        <fullName>Autorizar_Refaturamento</fullName>
        <active>true</active>
        <label>Autorizar Refaturamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Barrar_Fraude</fullName>
        <active>true</active>
        <label>Barrar - Fraude</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancelamento</fullName>
        <active>true</active>
        <label>Cancelamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Coleta_e_Devolucao</fullName>
        <active>true</active>
        <label>Coleta e Devolução</label>
    </recordTypes>
    <recordTypes>
        <fullName>Colocar_o_SIM_na_OC</fullName>
        <active>true</active>
        <label>Colocar o SIM na OC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Confirmar_Pedido_Barrado</fullName>
        <active>true</active>
        <label>Confirmar Pedido Barrado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Desbloquear_Pedido_e_Colocar_SIM_na_OC</fullName>
        <active>true</active>
        <label>Desbloquear Pedido e Colocar SIM na OC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Divergencia_CD350</fullName>
        <active>true</active>
        <label>Divergência CD350</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entrega_com_NF</fullName>
        <active>true</active>
        <label>Entrega com NF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entrega_sem_NF</fullName>
        <active>true</active>
        <label>Entrega sem NF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Erro_de_Cadastro</fullName>
        <active>true</active>
        <label>Erro de Cadastro</label>
    </recordTypes>
    <recordTypes>
        <fullName>Garantia_Estendida</fullName>
        <active>true</active>
        <label>Garantia Estendida</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gerar_Declaracao_de_Venda</fullName>
        <active>true</active>
        <label>Gerar Declaração de Venda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gerar_Saldo_Empenho_Virtual_e_Desbloquear_Pedido</fullName>
        <active>true</active>
        <label>Gerar Saldo / Empenho Virtual e Desbloquear Pedido</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gerar_Saldo_Troca_Rot_T</fullName>
        <active>true</active>
        <label>Gerar Saldo Troca Rot T</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gerar_Troca_ou_Cancelamento_Simbolico</fullName>
        <active>true</active>
        <label>Gerar Troca ou Cancelamento Simbólico</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liberar_Saldo_Excecao_Retirar_do_lote</fullName>
        <active>true</active>
        <label>Liberar Saldo - Exceção | Retirar do lote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nota_Fiscal</fullName>
        <active>true</active>
        <label>Nota Fiscal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pendencia_Entrega</fullName>
        <active>true</active>
        <label>Pendencia Entrega</label>
    </recordTypes>
    <recordTypes>
        <fullName>Problemas_com_trocas_ou_vendas</fullName>
        <active>true</active>
        <label>Problemas com trocas ou vendas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Troca</fullName>
        <active>true</active>
        <label>Processar Troca</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Troca_Rot_T_1</fullName>
        <active>true</active>
        <label>Processar Troca Rot T - 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Troca_Rot_T_2</fullName>
        <active>true</active>
        <label>Processar Troca Rot T - 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Troca_ou_Cancelamento</fullName>
        <active>true</active>
        <label>Processar Troca ou Cancelamento</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Venda_Ecom</fullName>
        <active>true</active>
        <label>Processar Venda Ecom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Venda_Novo_Produto</fullName>
        <active>true</active>
        <label>Processar Venda Novo Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Venda_Rot_T</fullName>
        <active>true</active>
        <label>Processar Venda Rot T</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processar_Venda_Rot_T_Novo_Produto</fullName>
        <active>true</active>
        <label>Processar Venda Rot T - Novo Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Produto_Devolvido</fullName>
        <active>true</active>
        <label>Produto Devolvido</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refaturamento</fullName>
        <active>true</active>
        <label>Verificar Similar | Previsão - Troca</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resposta_Final_de_Entrega</fullName>
        <active>true</active>
        <label>Resposta Final de Entrega</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirar_do_Lote_e_Gerar_Saldo</fullName>
        <active>true</active>
        <label>Retirar do Lote e Gerar Saldo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retorno_Acareacao</fullName>
        <active>true</active>
        <label>Retorno Acareação</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solicitar_Restituicao</fullName>
        <active>true</active>
        <label>Solicitar Restituição</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solucionar_Pendencia</fullName>
        <active>true</active>
        <label>Solucionar Pendência</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suporte_Comercial_Preventivo</fullName>
        <active>true</active>
        <label>Suporte Comercial Preventivo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Troca</fullName>
        <active>true</active>
        <label>Retirar do Lote e Gerar Saldo - Troca</label>
    </recordTypes>
    <recordTypes>
        <fullName>Validar_Produto_Escolhido</fullName>
        <active>true</active>
        <label>Validar Produto Escolhido</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verificar_Produto_Similar</fullName>
        <active>true</active>
        <label>Verificar Produto Similar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verificar_Similar_Previsao</fullName>
        <active>true</active>
        <label>Verificar Similar | Previsão</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verificar_Similar_Previsao_ProbVendas</fullName>
        <active>true</active>
        <label>Verificar Similar | Previsão - Problemas com Trocas ou Vendas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verificar_Similar_Previsao_Sup_Com</fullName>
        <active>true</active>
        <label>Verificar Similar | Previsão Sup Com</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verificar_Similar_Previsao_Suporte_Comercial</fullName>
        <active>true</active>
        <label>Verificar Similar | Previsão - Suporte Comercial</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Autorizado_por</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Autorizar Refaturamento&quot;, 
ISPICKVAL(AuthorizedRefaturamento__c, &quot;Sim (PREENCHER ATÉ Barrar produto?)&quot;), 
NOT(ISNEW()), 
OR (ISBLANK(AuthorizedBy__c), 
    ISBLANK(text(AproveReason__c)), 
    ISBLANK(text(BarringProduct__c)))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Os campos Autorizado por, Motivo da aprovação e Barrar produto? são obrigatorios</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Classificacao_do_erro_causado</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Erro de Anúncio&quot;,
			RecordType.Name = &quot;Acompanhar Posição Erro de Anúncio&quot;,RecordType.Name=&quot;Análise Erro de Cadastro&quot;),
			ISPICKVAL(Action__c,&quot;Enviar para ativo posicionar cliente&quot;), ISBLANK(text(ErrorCausedRating__c))),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Campo obrigatório Classificação do erro causado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CodigoDoItemCorreto</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name=&quot;Verificar Similar | Previsão Sup Com&quot;,
ISPICKVAL(ProposedSolutionforComercialSuport__c,&quot;Efetue a troca para o cliente pelo produto correto&quot;), 
ISBLANK(Codigo_do_item_correto__c)), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo código do item é obrigatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Codigo_do_item_correto</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(OR(RecordType.Name = &quot;Análise Erro de Anúncio&quot;,
RecordType.Name = &quot;Acompanhar Posição Erro de Anúncio&quot;),
ISPICKVAL(ProposedSolutionforComercialSuport__c,&quot;Efetue a troca para o cliente pelo produto correto&quot;), 
ISBLANK(CorrectItemCode__c)), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo código do item é obrigatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DadosQueEstaoDivergentes</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Autorizar Refaturamento&quot;, 
ISPICKVAL(AuthorizedRefaturamento__c, &quot;Não/ Dados divergentes (PREENCHER Dados que estão divergentes)&quot;), 
NOT(ISNEW()), 
ISBLANK(DataThatDivergent__c)), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Dados que estão divergentes é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataPrevistaParaColetaOuDevolucao</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Análise Coleta e Devolução&quot;, 
   OR(ISPICKVAL (Solution__c, &quot;Transportadora acionada / Verificar nova previsão de coleta abaixo:&quot;),
   ISPICKVAL (Solution__c, &quot;A nota fiscal foi devolvida para o CD / Verificar nova previsão abaixo:&quot;),
   ISPICKVAL (Solution__c, &quot;Transportadora acionada / Verificar previsão de devolução abaixo&quot;)),
   ISNULL(ScheduledDateCollectionReturn__c)),
   TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo &apos;Data prevista para coleta ou devolução&apos; é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dataprevistaparadevolucaodoproduto</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Entrega Acareação&quot;,
			RecordType.Name = &quot;Resposta Final de Entrega&quot;,RecordType.Name=&quot;Retorno Acareação&quot;),
			ISPICKVAL(Action__c,&quot;Pedido está sendo devolvido, verificar data de devolução abaixo (PREENCHER A PERGUNTA 3)&quot;), ISBLANK(text( ScheduledDateReturnProduct__c))),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Data prevista para devolução do produto é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dataprevistaparaentrega</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Entrega Acareação&quot;,
			RecordType.Name = &quot;Resposta Final de Entrega&quot;,RecordType.Name=&quot;Retorno Acareação&quot;),
			ISPICKVAL(Action__c,&quot;Verificar previsão de entrega abaixo (PREENCHER A PERGUNTA 2)&quot;), isnull(  ScheduledDateDeliveryReturn__c )),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Campo obrigatório Data prevista para entrega</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailTransportadora</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Autorizar Refaturamento&quot;, 
ISPICKVAL(AuthorizedRefaturamento__c, &quot;Não (PREENCHER E-mail Transportadora e Tipo da nota fiscal refaturamento)&quot;), 
NOT(ISNEW()), 
OR (ISBLANK(CarrierEmail__c), 
ISBLANK(text(TypeInvoiceRefaturamento__c)))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Os campos Email transportadora e Tipo da nota fiscal de refaturamento são obrigatórios.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NumerodoProtocolodeRefaturamento</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Entrega Acareação&quot;,
			RecordType.Name = &quot;Resposta Final de Entrega&quot;,RecordType.Name=&quot;Retorno Acareação&quot;),
			ISPICKVAL(Action__c,&quot;Verificar protocolo de refaturamento já aberto (PREENCHER A PERGUNTA 4)&quot;), ISBLANK(text(  NumberProtocolRefaturamento__c ))),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Número do protocolo de refaturamento é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Oferecer_Similar</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Erro de Anúncio&quot;,
			RecordType.Name = &quot;Acompanhar Posição Erro de Anúncio&quot;,RecordType.Name = &quot;Verificar Produto Similar&quot;,RecordType.Name=&quot;Verificar Similar | Previsão&quot;, RecordType.Name=&quot;Verificar Similar | Previsão - Problemas com Trocas ou Vendas&quot;, RecordType.Name=&quot;Verificar Similar | Previsão Sup Com&quot;, RecordType.Name=&quot;Verificar Similar | Previsão - Suporte Comercial&quot;, RecordType.Name=&quot;Verificar Similar | Previsão - Troca&quot;),
			ISPICKVAL(ProposedSolutionforComercialSuport__c,&quot;Não temos o produto correto disponível - Ofereça o similar abaixo&quot;), 
			or(ISBLANK(text(OfferSimiliar1__c)),ISBLANK(DifferenceChargedSimilar1__c))),TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Os campos de Oferecer Similar 1 e Diferença do Similiar 1 são obrigatorios</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProdutoAvariado</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Entrega Acareação&quot;,
			RecordType.Name = &quot;Resposta Final de Entrega&quot;,RecordType.Name=&quot;Retorno Acareação&quot;),
			ISPICKVAL(Action__c,&quot;Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA! (PREENCHER A PERGUNTA 5)&quot;), isblank(DefectiveProduct__c)),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Produto avariado é obrigatório</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualDadoEstaDivergente</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Processar Venda Rot T&quot;,
ISPICKVAL(Venda_Rot_T_Novo_produto_processada__c, &quot;Dados divergentes / Enviar para Atendimento verificar&quot;), 
NOT(ISNEW()), 
OR(ISBLANK(Qual_dado_esta_divergente__c), ISNULL(Qual_dado_esta_divergente__c))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Qual dado está divergente é obrigatório</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualDadoEstaDivergenteEcom</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Processar Venda Ecom&quot;, 
ISPICKVAL(Venda_ecom_processada__c, &quot;Dados divergentes / Enviar para Atendimento verificar (PREENCHER Qual dado está divergente?)&quot;), 
NOT(ISNEW()), 
OR(ISBLANK(Qual_dado_esta_divergente__c), ISNULL(Qual_dado_esta_divergente__c))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Qual dado está divergente é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualProdutoNaoEstaDisponivel</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
   AND(
       OR(
          RecordType.Name = &quot;Processar Venda Rot T&quot;,
          RecordType.Name = &quot;Processar Venda Rot T - Novo Produto&quot;
          ), 
          ISPICKVAL(Venda_Rot_T_Novo_produto_processada__c, &quot;Parcialmente / Enviar para reversa efetuar empenho virtual&quot;),
NOT(ISNEW()), 
OR(ISBLANK(Qual_produto_n_o_est_dispon_vel__c), ISNULL(Qual_produto_n_o_est_dispon_vel__c))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Qual produto não está disponível é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QualProdutoNaoEstaDisponivelEcom</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Processar Venda Ecom&quot;, 
ISPICKVAL(Venda_ecom_processada__c, &quot;Parcialmente / Enviar para Suporte Comercial verificar similar&quot;), 
NOT(ISNEW()), 
OR(ISBLANK(Qual_produto_n_o_est_dispon_vel__c), ISNULL(Qual_produto_n_o_est_dispon_vel__c))), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Qual produto não está disponível é obrigatório.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Responsavel_pelo_erro</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Erro de Anúncio&quot;,
			RecordType.Name = &quot;Acompanhar Posição Erro de Anúncio&quot;),
			OR (ISPICKVAL (Action__c, &quot;Enviar para ativo posicionar cliente&quot;), ISBLANK (text(Action__c))),
			NOT(ISPICKVAL(ErrorCausedRating__c,&quot;Não é erro de anúncio&quot;)),
                        NOT(ISNEW()),
                        ISBLANK(text(ResponsibleForError__c))),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Responsável pelo erro é obrigatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solucao_proposta_pelo_suporte_comercial</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(RecordType.Name = &quot;Análise Erro de Anúncio&quot;,
			RecordType.Name = &quot;Acompanhar Posição Erro de Anúncio&quot;),
			OR (ISPICKVAL (Action__c, &quot;Enviar para ativo posicionar cliente&quot;), ISBLANK (text(Action__c))),
			NOT(ISPICKVAL(ErrorCausedRating__c,&quot;Não é erro de anúncio&quot;)),
                        NOT(ISNEW()),
                        ISBLANK(text(ProposedSolutionforComercialSuport__c))),
			TRUE, FALSE)</errorConditionFormula>
        <errorMessage>O campo Solução proposta pelo suporte comercial é obrigatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaPendenciaEntregaFase1</fullName>
        <active>false</active>
        <errorConditionFormula>IF(RecordType.Name = &quot;Pendencia Entrega&quot;, IF(AND(ISPICKVAL(Conseguiu_contato_com_o_cliente__c ,&apos;Sim&apos;), ISPICKVAL(ResolvedDispute__c ,&apos;&apos;),ISBLANK(Comments__c)),TRUE, FALSE), FALSE)</errorConditionFormula>
        <errorMessage>Favor preencher campos da sessão Posicionar cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaPendenciaEntregaFase2</fullName>
        <active>false</active>
        <errorConditionFormula>IF(RecordType.Name = &quot;Pendencia Entrega&quot;,  IF( AND( ISPICKVAL(Conseguiu_contato_com_o_cliente__c , &apos;&apos;) , ISPICKVAL(ResolvedDispute__c , &apos;&apos;) , ISBLANK(Comments__c) ) , TRUE,  IF( AND( ISPICKVAL( Conseguiu_contato_com_o_cliente_Acomp__c , &apos;Sim&apos;) , ISPICKVAL( ResolvedDisputedAcom__c , &apos;Enviar para CD350 solucionar a pendência&apos;) , ISBLANK( ObservationAcomp__c ) ) , TRUE, FALSE) ) , FALSE)</errorConditionFormula>
        <errorMessage>Favor preencher campos da sessão Acomp. Posicionar cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaPendenciaEntregaFase3</fullName>
        <active>true</active>
        <errorConditionFormula>IF(RecordType.Name = &quot;Pendencia Entrega&quot;,IF( AND( ISPICKVAL(Conseguiu_contato_com_o_cliente__c , &apos;&apos;) , ISPICKVAL(ResolvedDispute__c , &apos;&apos;) , 
ISBLANK(Comments__c),
ISPICKVAL(Conseguiu_contato_com_o_cliente_Acomp__c , &apos;&apos;),
ISPICKVAL(ResolvedDisputedAcom__c , &apos;&apos;),
ISBLANK(ObservationAcomp__c )) , IF( ISBLANK( FinalPositionCustomer__c ) , TRUE, FALSE),FALSE), FALSE)</errorConditionFormula>
        <errorMessage>Favor preencher campos da sessão Solucionar pendência CD350.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaPendenciaEntregaFase4</fullName>
        <active>false</active>
        <errorConditionFormula>IF(RecordType.Name = &quot;Pendencia Entrega&quot;,  IF( AND( ISPICKVAL(Conseguiu_contato_com_o_cliente__c , &apos;&apos;) , ISPICKVAL(ResolvedDispute__c , &apos;&apos;) , 
ISBLANK(Comments__c), 
ISPICKVAL(Conseguiu_contato_com_o_cliente_Acomp__c , &apos;&apos;), 
ISPICKVAL(ResolvedDisputedAcom__c , &apos;&apos;), 
ISBLANK(ObservationAcomp__c ),
ISBLANK(FinalPositionCustomer__c ) ,
ISPICKVAL(Conseguiu_contato_com_clienteProcess__c , &apos;&apos;),
ISBLANK(ProcessingComments__c)  ) ,TRUE,FALSE ),FALSE)</errorConditionFormula>
        <errorMessage>Favor preencher campos restantes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_Dados_que_estao_divergentes</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Autorizar Refaturamento&quot;,
	ISPICKVAL( AuthorizedRefaturamento__c,&quot;Não/ Dados divergentes (PREENCHER Dados que estão divergentes)&quot;),isblank(DataThatDivergent__c )), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Informe o campo Dados que estão divergentes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_E_mail_transp_TP_Nota_fiscal</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.Name = &quot;Autorizar Refaturamento&quot;,ISPICKVAL( AuthorizedRefaturamento__c,&quot;Não (PREENCHER E-mail Trasnportadora e Tipo da nota fiscal refaturamento)&quot;), or(ISBLANK(  CarrierEmail__c ), isblank( text(  TypeInvoiceRefaturamento__c )),isblank( text(AproveReason__c) ))), TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Informar os campos de E-mail da Transportada e Tipo da nota fiscal de refaturamento</errorMessage>
    </validationRules>
</CustomObject>